--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bingo home</title>
-    <script src="scripts/autentication.js"></script>
+    <script src="scripts/authentication.js"></script>
 </head>
 <body>
     <div id="data"></div>
