--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="scripts/authentication.js"></script>
 </head>
 <body>
+    <h1>working</h1>
     <div id="data"></div>
     
 </body>
