--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bingo home</title>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="scripts/authentication.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>working</h1>
