--- a/client/playground.html
+++ b/client/playground.html
@@ -117,7 +117,7 @@
 </html>
 <script>
     const draw_number=[];
-    const ws = new WebSocket("ws://localhost:8080");
+    const ws = new WebSocket("https://game-3v97.onrender.com:8080");
     let bingo_btn =document.getElementById('bingo_btn');
     const container = document.getElementById("container");
     let marked_numbers = [];
